    - SensorManager::addSensor() now gracefully handles if object registration to dbus fails.
    - SocketHandler::socketReadable now gracefully handles if client writes sessionId incorrectly.
    - Cleanup for adaptor codes
    - Better error checks in InputDevAdaptor::getInputDevices().
    - Logger optimized and improved a bit.
    - Debug logs improved.
    - Cleanup makefiles.
  * Downsampling (which works by dropping samples) can be now enabled/disabled.
  * OrientationInterpreter filter orientation_buffer_size is now configurable.
  * Threshold accessors removed from OrientationFilter since those had no effect.
  * OrientationInterpreter default settings now provide more sensitive orientation detection. Fixes: NB#232872.
  * Proximity sensor dataflow now uses datatype ProximityData. 
  * ProximitySensorChannelInterface provides signal and accessor for getting proximity reading with reflectance value.
  * c-api removed from doxygen targets.
  * Config-class now better handles errors.
  * AccelerometerAdaptor used for some reason OrientationData. Should have
    been AccelerometerData. Only cosmetic change.
  * Implemented new downsampling logic:
    - AccelerometerAdaptor, MagnetometerAdaptor and RotationSensorChannel interval rangelist has been limited to certain sizes.
    - AccelerometerSensorChannel, RotationSensorChannel and MagnetometerSensorChannel downsamples data before propagating it.
  * Config-class has now more friendly API.
  * sensordtestapp improvements.

  [Shenghua Liu]
  * Make sensortestapp thread safe in exiting
  * Fix sensord-tests-install 
  * Fix sensordtestapp for qt apt to print out proximity reflectance data
  * Fix the Proximity metatype registration problem

 -- Antti Virtanen <antti.i.virtanen@nokia.com>  Tue, 15 Mar 2011 17:53:25 +0200

sensord (0.6.40) unstable; urgency=low

  [Antti Virtanen]
  * SensorManager::releaseSensor() now removes bufferSize and bufferInterval settings for session from the node.